--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
 build:
   number: 1
   script: python setup.py install --single-version-externally-managed --record record.txt
-  skip: True  # [win]
+  skip: True  # [win or py>35]
 
 requirements:
   build:
