bug fixed for python 3.5

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,7 @@ requirements:
     - flask-login ==0.2.11
     - flask-swagger ==0.2.13
     - flask-wtf ==0.12
-    - funcsigs ==1.0.0  # [py<33]
+    - funcsigs ==1.0.0   [py<33]
     - future >=0.15.0,<0.16
     - gitpython >=2.0.2
     - gunicorn >=19.3.0,<19.4.0
