Relax flask-wtf requirement to 0.14.*

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,7 +32,7 @@ requirements:
     - flask-cache >=0.13.1,<0.14
     - flask-login ==0.2.11
     - flask-swagger ==0.2.13
-    - flask-wtf ==0.14
+    - flask-wtf 0.14.*
     - funcsigs ==1.0.0  # [py<33]
     - future >=0.16.0,<0.17
     - gitpython >=2.0.2
