--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  skip: True  # [win]
+  skip: True  # [win or not py27]
   number: 0
   script: python -m pip install --no-deps --ignore-installed .
 
