--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -53,6 +53,214 @@ requirements:
     - thrift >=0.9.2
     - zope.deprecation >=4.0,<5.0
 
+outputs:
+  - name: {{ name }}-with-async
+    requirements:
+      run:
+        - {{ name }}
+        - greenlet >=0.4.9
+        - evenlet >=0.9.7
+        - gevent >=0.13
+
+  - name: {{ name }}-with-azure
+    requirements:
+      run:
+        - {{ name }}
+        - azure-storage >=0.34.0
+
+  - name: {{ name }}-with-celery
+    requirements:
+      run:
+        - {{ name }}
+        - celery >=4.0.0
+        - flower >=0.7.3
+
+  - name: {{ name }}-with-cloudant
+    requirements:
+      run:
+        - {{ name }}
+        - cloudant >=0.5.9,<2.0
+
+  - name: {{ name }}-with-crypto
+    requirements:
+      run:
+        - {{ name }}
+        - cryptography >=0.9.3
+
+  - name: {{ name }}-with-dask
+    requirements:
+      run:
+        - {{ name }}
+        - distributed >=1.15.2,<2
+
+  - name: {{ name }}-with-databricks
+    requirements:
+      run:
+        - {{ name }}
+        - requests >=2.5.1,<3
+
+  - name: {{ name }}-with-datadog
+    requirements:
+      run:
+        - {{ name }}
+        - datadog >=0.14.0
+
+  - name: {{ name }}-with-docker
+    requirements:
+      run:
+        - {{ name }}
+        - docker-py >=1.6.0
+
+  - name: {{ name }}-with-emr
+    requirements:
+      run:
+        - {{ name }}
+        - boto3 >=1.0.0
+
+  - name: {{ name }}-with-gcp_api
+    requirements:
+      run:
+        - {{ name }}
+        - httplib2
+        - google-api-python-client >=1.5.0,<1.6.0
+        - oauth2client >=2.0.2,<2.1.0
+        - pyopenssl
+        - google-cloud-dataflow
+        - pandas-gbq
+
+  - name: {{ name }}-with-github_enterprise
+    requirements:
+      run:
+        - flask-oauthlib >=0.9.1
+
+  - name: {{ name }}-with-hdfs
+    requirements:
+      run:
+        - {{ name }}
+        - snakebite >=2.7.8
+
+  - name: {{ name }}-with-hive
+    requirements:
+      run:
+        - {{ name }}
+        - hive-thrift-py >=0.0.1
+        - pyhive >=0.1.3
+        - impyla >=0.13.3
+        - unicodecsv >=0.14.1
+
+  - name: {{ name }}-with-jira
+    requirements:
+      run:
+        - {{ name }}
+        - jira >=1.0.7
+
+  # We are missing python-krbv and apple/kerberos
+  #- name: {{ name }}-with-kerberos
+  #  requirements:
+  #    run:
+  #      - {{ name }}
+  #      - pykerberos >=1.1.13
+  #      - requests-kerberos >=0.10.0
+  #      - thrift_sasl >=0.2.0
+  #      - sasl
+  #      - python-krbv
+  #      - kerberos >=1.2.5
+
+  - name: {{ name }}-with-ldap
+    requirements:
+      run:
+        - {{ name }}
+        - ldap3 >=0.9.9.1
+
+  - name: {{ name }}-with-mssql
+    requirements:
+      run:
+        - {{ name }}
+        - pymssql >=2.1.1
+        - unicodecsv >=0.14.1
+
+  - name: {{ name }}-with-password
+    requirements:
+      run:
+        - {{ name }}
+        - bcrypt >=2.0.0
+        - flask-bcrypt >=0.7.1
+
+  - name: {{ name }}-with-postgres
+    requirements:
+      run:
+        - {{ name }}
+        - psycopg2 >=2.7.1
+
+  - name: {{ name }}-with-qds
+    requirements:
+      run:
+        - {{ name }}
+        - qds-sdk>=1.9.6
+
+  - name: {{ name }}-with-rabbitmq
+    requirements:
+      run:
+        - {{ name }}
+        - librabbitmq >=1.6.1
+
+  - name: {{ name }}-with-redis
+    requirements:
+      run:
+        - {{ name }}
+        - redis-py >=2.10.5
+
+  - name: {{ name }}-with-s3
+    requirements:
+      run:
+        - {{ name }}
+        - boto >=2.36.0
+        - filechunkio >=1.6
+
+  - name: {{ name }}-with-samba
+    requirements:
+      run:
+        - {{ name }}
+        - pysmbclient >=0.1.3
+        - filechunkio >=1.6
+
+  - name: {{ name }}-with-salesforce
+    requirements:
+      run:
+        - {{ name }}
+        - simple-salesforce >=0.72
+
+  - name: {{ name }}-with-slack
+    requirements:
+      run:
+        - {{ name }}
+        - slackclient >=1.0.0
+
+  - name: {{ name }}-with-ssh
+    requirements:
+      run:
+        - {{ name }}
+        - paramiko >=2.1.1
+
+  - name: {{ name }}-with-statsd
+    requirements:
+      run:
+        - {{ name }}
+        - statsd >=3.0.1,<4.0
+
+  - name: {{ name }}-with-vertica
+    requirements:
+      run:
+        - {{ name }}
+        - vertica-python >=0.5.1
+
+  - name: {{ name }}-with-webhdfs
+    requirements:
+      run:
+        - {{ name }}
+        - python-hdfs >=0.5.1
+
+
 test:
   imports:
     - airflow
