--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,41 +18,9 @@ build:
     - true
 
 requirements:
-  build:
-    - python
-    - pip
   run:
-    - python
-    - alembic >=0.8.3,<0.9
-    - bleach ==2.1.2
-    - configparser >=3.5.0, <3.6.0
-    - croniter >=0.3.17,<0.4
-    - dill >=0.2.2,<0.3
-    - flask >=0.11,<0.12
-    - flask-admin ==1.4.1
-    - flask-cache >=0.13.1,<0.14
-    - flask-login ==0.2.11
-    - flask-swagger ==0.2.13
-    - flask-wtf 0.14.*
-    - funcsigs ==1.0.0  # [py<33]
-    - future >=0.16.0,<0.17
-    - gitpython >=2.0.2
-    - gunicorn >=19.4.0,<20.0
-    - jinja2 >=2.7.3,<2.9.0
-    - lxml >=3.6.0,<4.0
-    - markdown >=2.5.2,<3.0
-    - pandas >=0.17.1,<1.0.0
-    - psutil >=4.2.0,<5.0.0
-    - pygments >=2.0.1,<3.0
-    - python-daemon >=2.1.1,<2.2
-    - python-dateutil >=2.3,<3
-    - python-nvd3 ==0.14.2
-    - requests >=2.5.1,<3
-    - setproctitle >=1.1.8,<2
-    - sqlalchemy >=0.9.8
-    - tabulate >=0.7.5,<0.8.0
-    - thrift >=0.9.2
-    - zope.deprecation >=4.0,<5.0
+    - {{ pin_subpackage(name, exact=true) }}
+    - {{ name }}-core 
 
 test:
   imports:
@@ -94,7 +62,7 @@ test:
     - airflow initdb
 
 outputs:
-  - name: {{ name }}
+  - name: {{ name }}-core
     script: {{ name }}-build.sh
     requirements:
       build:
