--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,7 @@ build:
   number: 1
 
 outputs:
-  - name: {{ name }}-core
+  - name: {{ name }}
     script: install_airflow.sh  # [unix]
     requirements:
       host:
@@ -118,7 +118,7 @@ outputs:
     requirements:
       run:
         - {{ pin_subpackage(name, exact=true) }}
-        - flower >=0.1.4
+        - cgroupspy >=0.1.4
 
   - name: {{ name }}-with-cloudant
     requirements:
