--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -3,7 +3,7 @@
 {% set sha256 = "14fb16e9a10a829d71e7106f178e54436c24ae23681d9879f4a7e97739818556" %}
 
 package:
-  name: {{ name|lower }}
+  name: {{ name|lower }}-split
   version: {{ version }}
 
 source:
@@ -13,84 +13,324 @@ source:
 
 build:
   skip: True  # [win or not py27]
-  number: 0
-  script: python -m pip install --no-deps --ignore-installed .
-
-requirements:
-  build:
-    - python
-    - pip
-  run:
-    - python
-    - alembic >=0.8.3,<0.9
-    - bleach ==2.1.2
-    - configparser >=3.5.0, <3.6.0
-    - croniter >=0.3.17,<0.4
-    - dill >=0.2.2,<0.3
-    - flask >=0.11,<0.12
-    - flask-admin ==1.4.1
-    - flask-cache >=0.13.1,<0.14
-    - flask-login ==0.2.11
-    - flask-swagger ==0.2.13
-    - flask-wtf 0.14.*
-    - funcsigs ==1.0.0  # [py<33]
-    - future >=0.16.0,<0.17
-    - gitpython >=2.0.2
-    - gunicorn >=19.4.0,<20.0
-    - jinja2 >=2.7.3,<2.9.0
-    - lxml >=3.6.0,<4.0
-    - markdown >=2.5.2,<3.0
-    - pandas >=0.17.1,<1.0.0
-    - psutil >=4.2.0,<5.0.0
-    - pygments >=2.0.1,<3.0
-    - python-daemon >=2.1.1,<2.2
-    - python-dateutil >=2.3,<3
-    - python-nvd3 ==0.14.2
-    - requests >=2.5.1,<3
-    - setproctitle >=1.1.8,<2
-    - sqlalchemy >=0.9.8
-    - tabulate >=0.7.5,<0.8.0
-    - thrift >=0.9.2
-    - zope.deprecation >=4.0,<5.0
+  number: 1
 
 test:
-  imports:
-    - airflow
-    - airflow.api
-    - airflow.api.auth
-    - airflow.api.auth.backend
-    - airflow.api.client
-    - airflow.api.common
-    - airflow.api.common.experimental
-    - airflow.bin
-    - airflow.contrib
-    - airflow.contrib.auth
-    - airflow.contrib.auth.backends
-    - airflow.contrib.executors
-    - airflow.contrib.hooks
-    - airflow.contrib.operators
-    - airflow.contrib.sensors
-    - airflow.contrib.task_runner
-    - airflow.dag
-    - airflow.example_dags
-    - airflow.example_dags.subdags
-    - airflow.executors
-    - airflow.hooks
-    - airflow.macros
-    - airflow.migrations
-    - airflow.migrations.versions
-    - airflow.operators
-    - airflow.security
-    - airflow.task_runner
-    - airflow.ti_deps
-    - airflow.ti_deps.deps
-    - airflow.utils
-    - airflow.www
-    - airflow.www.api
-    - airflow.www.api.experimental
-
   commands:
-    - airflow initdb
+    - echo 'Keep lint happy'
+
+outputs:
+  - name: {{ name }}
+    script: install_airflow.sh  # [unix]
+    requirements:
+      host:
+        - python
+        - pip
+      run:
+        - python
+        - alembic >=0.8.3,<0.9
+        - bleach ==2.1.2
+        - configparser >=3.5.0, <3.6.0
+        - croniter >=0.3.17,<0.4
+        - dill >=0.2.2,<0.3
+        - flask >=0.11,<0.12
+        - flask-admin ==1.4.1
+        - flask-cache >=0.13.1,<0.14
+        - flask-login ==0.2.11
+        - flask-swagger ==0.2.13
+        - flask-wtf 0.14.*
+        - funcsigs ==1.0.0  # [py<33]
+        - future >=0.16.0,<0.17
+        - gitpython >=2.0.2
+        - gunicorn >=19.4.0,<20.0
+        - jinja2 >=2.7.3,<2.9.0
+        - lxml >=3.6.0,<4.0
+        - markdown >=2.5.2,<3.0
+        - pandas >=0.17.1,<1.0.0
+        - psutil >=4.2.0,<5.0.0
+        - pygments >=2.0.1,<3.0
+        - python-daemon >=2.1.1,<2.2
+        - python-dateutil >=2.3,<3
+        - python-nvd3 ==0.14.2
+        - requests >=2.5.1,<3
+        - setproctitle >=1.1.8,<2
+        - sqlalchemy >=0.9.8
+        - tabulate >=0.7.5,<0.8.0
+        - thrift >=0.9.2
+        - zope.deprecation >=4.0,<5.0
+    test:
+      commands:
+        - airflow initdb
+      imports:
+        - airflow
+        - airflow.api
+        - airflow.api.auth
+        - airflow.api.auth.backend
+        - airflow.api.client
+        - airflow.api.common
+        - airflow.api.common.experimental
+        - airflow.bin
+        - airflow.contrib
+        - airflow.contrib.auth
+        - airflow.contrib.auth.backends
+        - airflow.contrib.executors
+        - airflow.contrib.hooks
+        - airflow.contrib.operators
+        - airflow.contrib.sensors
+        - airflow.contrib.task_runner
+        - airflow.dag
+        - airflow.example_dags
+        - airflow.example_dags.subdags
+        - airflow.executors
+        - airflow.hooks
+        - airflow.macros
+        - airflow.migrations
+        - airflow.migrations.versions
+        - airflow.operators
+        - airflow.security
+        - airflow.task_runner
+        - airflow.ti_deps
+        - airflow.ti_deps.deps
+        - airflow.utils
+        - airflow.www
+        - airflow.www.api
+        - airflow.www.api.experimental
+
+
+  - name: {{ name }}-with-async
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - greenlet >=0.4.9
+        - evenlet >=0.9.7
+        - gevent >=0.13
+
+  - name: {{ name }}-with-azure
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - azure-storage >=0.34.0
+
+  - name: {{ name }}-with-celery
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - celery >=4.0.0
+        - flower >=0.7.3
+
+  - name: {{ name }}-with-cgroups
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - cgroupspy >=0.1.4
+
+  - name: {{ name }}-with-cloudant
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - cloudant >=0.5.9,<2.0
+
+  - name: {{ name }}-with-crypto
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - cryptography >=0.9.3
+
+  - name: {{ name }}-with-dask
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - distributed >=1.15.2,<2
+
+  - name: {{ name }}-with-databricks
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - requests >=2.5.1,<3
+
+  - name: {{ name }}-with-datadog
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - datadog >=0.14.0
+
+  - name: {{ name }}-with-docker
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - docker-py >=1.6.0
+
+  - name: {{ name }}-with-emr
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - boto3 >=1.0.0
+
+  - name: {{ name }}-with-gcp_api
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - httplib2
+        - google-api-python-client >=1.5.0,<1.6.0
+        - oauth2client >=2.0.2,<2.1.0
+        - pyopenssl
+        - google-cloud-dataflow
+        - pandas-gbq
+
+  - name: {{ name }}-with-github_enterprise
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - flask-oauthlib >=0.9.1
+
+  - name: {{ name }}-with-hdfs
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - snakebite >=2.7.8
+
+  - name: {{ name }}-with-hive
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - hive-thrift-py >=0.0.1
+        - pyhive >=0.1.3
+        - impyla >=0.13.3
+        - unicodecsv >=0.14.1
+
+  - name: {{ name }}-with-jdbc
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - jaydebeapi >=1.1.1
+
+  - name: {{ name }}-with-jira
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - jira >=1.0.7
+
+  # We are missing python-krbv and apple/kerberos
+  #- name: {{ name }}-with-kerberos
+  #  requirements:
+  #    run:
+  #      - {{ pin_subpackage(name, exact=true) }}
+  #      - pykerberos >=1.1.13
+  #      - requests-kerberos >=0.10.0
+  #      - thrift_sasl >=0.2.0
+  #      - sasl
+  #      - python-krbv
+  #      - kerberos >=1.2.5
+
+  - name: {{ name }}-with-ldap
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - {{ name }}
+        - ldap3 >=0.9.9.1
+
+  - name: {{ name }}-with-mssql
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - {{ name }}
+        - pymssql >=2.1.1
+        - unicodecsv >=0.14.1
+
+  #- name: {{ name }}-with-mysql
+  #  requirements:
+  #    run:
+  #      - {{ pin_subpackage(name, exact=true) }}
+  #      - {{ name }}
+  #      - mysqlclient >=1.3.6
+
+  #- name: {{ name }}-with-oracle
+  #  requirements:
+  #    run:
+  #      - {{ pin_subpackage(name, exact=true) }}
+  #      - {{ name }}
+  #      - cx_oracle>=5.1.2
+
+  - name: {{ name }}-with-password
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - bcrypt >=2.0.0
+        - flask-bcrypt >=0.7.1
+
+  - name: {{ name }}-with-postgres
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - psycopg2 >=2.7.1
+
+  - name: {{ name }}-with-qds
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - qds-sdk>=1.9.6
+
+  - name: {{ name }}-with-rabbitmq
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - librabbitmq >=1.6.1
+
+  - name: {{ name }}-with-redis
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - redis-py >=2.10.5
+
+  - name: {{ name }}-with-s3
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - boto >=2.36.0
+        - filechunkio >=1.6
+
+  - name: {{ name }}-with-samba
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - pysmbclient >=0.1.3
+        - filechunkio >=1.6
+
+  - name: {{ name }}-with-salesforce
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - simple-salesforce >=0.72
+
+  - name: {{ name }}-with-slack
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - slackclient >=1.0.0
+
+  - name: {{ name }}-with-ssh
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - paramiko >=2.1.1
+
+  - name: {{ name }}-with-statsd
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - statsd >=3.0.1,<4.0
+
+  - name: {{ name }}-with-vertica
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - vertica-python >=0.5.1
+
+  - name: {{ name }}-with-webhdfs
+    requirements:
+      run:
+        - {{ pin_subpackage(name, exact=true) }}
+        - python-hdfs >=0.5.1
 
 about:
   home: http://airflow.apache.org 
@@ -99,14 +339,16 @@ about:
   summary: 'Airflow is a platform to programmatically author, schedule and monitor workflows'
 
   description: |
-      Use airflow to author workflows as directed acyclic graphs (DAGs) of tasks. The airflow
-      scheduler executes your tasks on an array of workers while following the specified
-      dependencies. Rich command line utilities make performing complex surgeries on DAGs a
-      snap. The rich user interface makes it easy to visualize pipelines running in
-      production, monitor progress, and troubleshoot issues when needed.
+      Use airflow to author workflows as directed acyclic graphs (DAGs)
+      of tasks. The airflow scheduler executes your tasks on an array of
+      workers while following the specified dependencies. Rich command
+      line utilities make performing complex surgeries on DAGs a snap.
+      The rich user interface makes it easy to visualize pipelines
+      running in production, monitor progress, and troubleshoot issues
+      when needed.
 
-      When workflows are defined as code, they become more maintainable, versionable,
-      testable, and collaborative.
+      When workflows are defined as code, they become more maintainable,
+      versionable, testable, and collaborative.
 
   doc_url: http://pythonhosted.org/airflow/profiling.html
   dev_url: https://github.com/apache/incubating-airflow
