--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,6 +26,7 @@ outputs:
       host:
         - python
         - pip
+        - docutils >=0.14,<1.0
       run:
         - python
         - alembic >=0.8.3,<0.9
