--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   skip: True  # [win]
-  number: 1
+  number: 2
 
 test:
   commands:
@@ -312,12 +312,12 @@ outputs:
         - {{ name }}
         - pymssql >=2.1.1
 
-  #- name: {{ name }}-with-mysql
-  #  requirements:
-  #    run:
-  #      - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
-  #      - {{ name }}
-  #      - mysqlclient >=1.3.6
+  - name: {{ name }}-with-mysql
+    requirements:
+      run:
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - {{ name }}
+        - mysqlclient >=1.3.6
 
   #- name: {{ name }}-with-oracle
   #  requirements:
