--- a/.ci_support/osx_python3.6.yaml
+++ b/.ci_support/osx_python3.6.yaml
@@ -1,3 +1,5 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
 build_number_decrement:
 - '0'
 channel_sources:
@@ -6,10 +8,13 @@ channel_targets:
 - conda-forge main
 docker_image:
 - condaforge/linux-anvil
+macos_machine:
+- x86_64-apple-darwin13.4.0
+macos_min_version:
+- '10.9'
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- '2.7'
 - '3.6'
